# hello-azd-bicep

./: Notes.txt  README.md  TODO.md  azure.yaml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: Prompts.md  TODO.md
infra/: main.bicep
infra/modules/: ai-foundry-project.bicep  key-vault.bicep
scripts/: ask_agent.py  create_agent.py  create_agent2.py  set_envs.py
tests/: conftest.py  test_agent_smoke.py
